
  * Please note when reading stats that jessie was released with 1.61.
  * debian/control:
   + Updated Standards-Version from 3.9.5 to 3.9.6.  No change needed.
   + Remove dependency on libio-socket-ip-perl (>= 0.25-3) included
     in perl-base.
   + Vcs-Git, Vcs-Browser: migrate to anonscm.debian.org URL
  * debian/rules:
   + Remove obsolete 'source' and 'diff' targets.

 -- Bill Allombert <ballombe@debian.org>  Sun, 26 Apr 2015 17:24:47 +0200

popularity-contest (1.61) unstable; urgency=low

  * Add support for IPv6. Closes: #730760. Thanks Bob Ham.
   + popcon-upload:
     - Use IO::Socket::IP instead of IO::Socket::INET in popcon-upload.
   + debian/control:
     - Add a dependency on libio-socket-ip-perl (>= 0.25-3).
       This module is targeted for inclusion in perl-base.
  * examples/bin/popcon.pl:
   - New popcon.debian.org layout by Stéphane Blondon
  * debian/control:
   - Updated Standards-Version from 3.9.4 to 3.9.5.  No change needed.
   - Add Vcs-Browser and Vcs-Git fields. Closes: #729024. 
     Thanks Yaroslav Halchenko.
   - Petter has retired as popcon maintainer. Adjust Uploaders field.
  * Allow derivatives to set up their own public keys in addition to Debian.
    Closes: #729097. Thanks Yaroslav Halchenko.
   + debian/cron.daily:
     - Add support for /etc/popularity-contest.d/
     - Allow multiple keyrings and keys to be set.
   + FAQ: Add section for derivative distributions 
     - Document /etc/popularity-contest.d/

 -- Bill Allombert <ballombe@debian.org>  Mon, 17 Mar 2014 20:37:27 +0100

popularity-contest (1.60) unstable; urgency=low

  * Encrypt reports by default:
    + default.conf, FAQ:
      - Set ENCRYPT=maybe by default and document it.
    As a consequence, reports are now compressed by default. Closes: #149425

 -- Bill Allombert <ballombe@debian.org>  Thu, 05 Sep 2013 09:29:57 +0200

popularity-contest (1.59) unstable; urgency=low

  * debian/cron.daily: